--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "repository": "git",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "properties-reader": "0.0.15",
     "request": "^2.79.0",
     "twitter": "^1.4.0"
